<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30dp"
    android:layout_marginVertical="20dp"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/taskhsl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/tgs"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/loginscc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mk"
        android:textColor="@color/black"
        android:textSize="12pt"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/hasilmk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/loginscc3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/waktu"
        android:textColor="@color/black"
        android:textSize="12pt"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/hasildl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" />
</LinearLayout>