<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/hello"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/HomeAwal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome"
            android:textSize="20pt"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tampilNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="12pt" />

    <TextView
        android:id="@+id/task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tgs"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/loginscc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mk"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/InputMatkul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/matkul"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Deadline"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/waktu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Masukkan Deadline"
        android:inputType="textMultiLine" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSimpan"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="130dp"
        android:clickable="true"
        app:rippleColor="@color/white"
        app:srcCompat="@android:drawable/ic_input_add" />
</LinearLayout>