<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="158dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077"
        app:srcCompat="@drawable/lgn" />

    <TextView
        android:id="@+id/menu_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/rgst"
        android:textColor="#2196F3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/name"
        android:textColor="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_regist" />

    <TextView
        android:id="@+id/dftremail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/email"
        android:textColor="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/dftrpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/pwd"
        android:textColor="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dftremail" />

    <TextView
        android:id="@+id/dftrpass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/pwd"
        android:textColor="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dftrpass" />

    <EditText
        android:id="@+id/inputnama"
        android:layout_width="287dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:background="#4B555252"
        android:ems="10"
        android:hint="@string/iNama"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/inputemail"
        android:layout_width="287dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:background="#2C4C4242"
        android:ems="10"
        android:hint="@string/dftremail"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/dftremail" />

    <EditText
        android:id="@+id/inputpw"
        android:layout_width="287dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:background="#31424141"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:drawableRight="@android:drawable/ic_menu_view"
        android:ems="10"
        android:hint="@string/dftrpass"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/dftrpass" />

    <EditText
        android:id="@+id/inputpw2"
        android:layout_width="287dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:background="#2D403F3F"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:drawableRight="@android:drawable/ic_menu_view"
        android:ems="10"
        android:hint="@string/dftrpass"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/dftrpass2" />

    <Button
        android:id="@+id/btnregis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rgst"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/inputpw2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/inputpw2"
        app:layout_constraintTop_toBottomOf="@+id/inputpw2"
        app:layout_constraintVertical_bias="0.3"
        tools:backgroundTint="#D875B1" />
</androidx.constraintlayout.widget.ConstraintLayout>